<resources>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_name">GroceryApp</string>
    <string name="app_header" >Grocery Manager</string>
    <string name="grocery_list">Grocery list</string>
    <string name="add_item">Item name</string>
    <string name="fridge">Fridge</string>
    <string name="add_button">Add</string>
    <string name="grocery_view">View your grocery lists</string>
    <string name="fridge_view">View your fridge</string>
    <string name="price">price:</string>
    <string name="price_number">Price</string>
    <string name="amount">amount:</string>
    <string name="amount_number">Amount</string>
    <string name="remove_button">Remove</string>
    <string name="exit">exit</string>
    <string name="action_delete">Delete list</string>
    <string name="edit">Edit</string>
    <string name="action_save">Save list</string>
    <string name="action_value">Fridges value</string>
    <string name="nothing_here">There is nothing here yet.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login_header1">Login or create an Account</string>
    <string name="login_header2">Create an Account</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="create_button">Create account</string>
    <string name="name_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="password_hint2">Retype Password</string>
    <string name="cloud_button">Cloud</string>


</resources>
