<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:backgroundTint="@color/colorPrimary"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_marginTop="80dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/login_header2"
        android:layout_centerHorizontal="true"
        android:id="@+id/loginHeader1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_below="@+id/loginHeader1"
        android:hint="@string/name_hint"
        android:id="@+id/loginName_edit"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:id="@+id/loginPassword_edit"
        android:layout_below="@+id/loginName_edit"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/password_hint2"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:id="@+id/loginPassword_edit2"
        android:layout_below="@+id/loginPassword_edit"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="10dp"
        android:background="@drawable/main_button"
        android:text="@string/create_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginPassword_edit2"
        android:id="@+id/createAccBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

</RelativeLayout>