<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addToFridge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/plus"
        app:backgroundTint="@color/colorPrimary"
        android:layout_marginBottom="75dp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/screen_background_light_transparent"
        android:src="@drawable/fridge"
        android:elevation="-5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:layout_marginBottom="55dp">

        <ListView
            android:id="@+id/fridgeList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="10dp"/>

        <RelativeLayout
            android:id="@+id/addItems"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:visibility="gone"
            android:background="@drawable/border"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/addPrice"
                android:background="@drawable/main_button"
                android:text="@string/add_button"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#58ACFA" />

            <Button
                android:id="@+id/removeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/addButton"
                android:background="@drawable/red_button"
                android:backgroundTint="#FA5882"
                android:text="@string/remove_button"
                android:textColor="#58ACFA" />

            <EditText
                android:id="@+id/newGroceryItem"
                android:layout_marginTop="5dp"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:ems="5"
                android:hint="@string/add_item"
                android:inputType="textPersonName"
                android:labelFor="@+id/newItem"
                android:textColor="#000000"
                android:textColorHint="#6E6E6E" />

            <EditText
                android:id="@+id/addAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:layout_below="@id/newGroceryItem"
                android:ems="5"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/amount_number"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#6E6E6E"
                android:layout_toEndOf="@id/addPrice"/>

            <EditText
                android:id="@+id/addPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:ems="5"
                android:hint="@string/price_number"
                android:inputType="numberDecimal"
                android:layout_below="@id/newGroceryItem"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_marginBottom="1dp"
                android:textColor="#000000"
                android:textColorHint="#6E6E6E" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>