<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.knatola.GroceryApp.MainActivity">

    <android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorPrimary"
    android:paddingTop="@dimen/appbar_padding_top"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:backgroundTint="@color/colorPrimary">

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_height="match_parent"
        app:headerLayout="@layout/navigation_drawer_layout"
        android:layout_gravity="start">

        <RelativeLayout
            android:layout_marginTop="180dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:id="@+id/nav_login"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:text="@string/login_button"
                android:layout_height="wrap_content" />

            <Button
                android:textColor="@android:color/black"
                android:layout_marginBottom="20dp"
                android:background="@drawable/red_button"
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:id="@+id/nav_logout"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:text="@string/logout_button"
                android:layout_height="wrap_content" />

            <Button
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/nav_login"
                android:id="@+id/nav_cloud"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:text="@string/cloud_button"
                android:layout_height="wrap_content" />

            <Button
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/nav_cloud"
                android:id="@+id/nav_settings"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:text="@string/action_settings"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </android.support.design.widget.NavigationView>
    <!-- Side navigation drawer UI -->


</android.support.v4.widget.DrawerLayout>